[gd_scene load_steps=4 format=3 uid="uid://gt1tbowf0bfi"]

[ext_resource type="Script" uid="uid://djday884lwg7t" path="res://scenes/UI/Hub/player_info.gd" id="1_b2jlx"]
[ext_resource type="PackedScene" uid="uid://cygb8wb8gdlit" path="res://scenes/UI/Popups/PropertyCard.tscn" id="2_t77uo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_63ke2"]

[node name="PlayerInfo" type="CanvasLayer"]
script = ExtResource("1_b2jlx")

[node name="BackGround" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 155.0
offset_top = 218.0
offset_right = -128.0
offset_bottom = -223.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_63ke2")
metadata/_edit_group_ = true

[node name="PropertyContainer" type="GridContainer" parent="BackGround"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 59.0
offset_top = 49.0
offset_right = -51.0
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 4

[node name="CloseBtn" type="Button" parent="BackGround"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_bottom = 35.0
grow_horizontal = 0
text = "X"

[node name="PropertyCard" parent="." instance=ExtResource("2_t77uo")]
visible = false

[connection signal="pressed" from="BackGround/CloseBtn" to="." method="_on_close_btn_pressed"]
